# python-workbench-template

./: .gitignore  README.md  main.py  pyproject.toml
app/config/: file.py
app/file/: reader.py
scripts/: example.py
src/python_workbench/: __init__.py
src/python_workbench/config/: __init__.py  paths.py
tests/: test_paths.py
