[tool.poetry]
name = "python-workbench"
version = "0.1.0"
description = ""
authors = ["Amon Otsuki <aotsuki@meteomatics.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
app = "^0.0.1"
black = "^24.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
