[project]
name = "python-workbench"
version = "0.1.0"
description = "A workspace for Python experiments, scripts, and prototypes"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_workbench"]

[tool.pytest.ini_options]
testpaths = ["tests"]
